# huchain

./: .gitignore  README.md  pyproject.toml
pychain/core/: block.py  chain.py
pychain/server/: main.py
scripts/: server.py
tests/core/: test_block.py  test_chain.py
