[tool.poetry]
name = "pychain"
version = "0.1.0"
description = ""
authors = ["Huy tran <huy.td183768@sis.hust.edu.vn>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
